[gd_scene load_steps=11 format=3 uid="uid://ugt6g6nd6ugp"]

[ext_resource type="Texture2D" uid="uid://bpqm4ixvccqd3" path="res://Assets/Art/PlaceHolders/DeviceSprite.png" id="1_momwt"]
[ext_resource type="Script" path="res://Device/Device.gd" id="1_ptlsy"]
[ext_resource type="Texture2D" uid="uid://cxp7kadfow6y7" path="res://Assets/Art/PlaceHolders/background.png" id="2_4ghtk"]
[ext_resource type="Texture2D" uid="uid://ojee7m82c32h" path="res://Assets/Art/PlaceHolders/AgumonSprite.png" id="3_rmlcu"]
[ext_resource type="Script" path="res://Device/GameArea.gd" id="3_ymaw0"]
[ext_resource type="Script" path="res://Device/RoomBackground.gd" id="4_rlyqa"]
[ext_resource type="Script" path="res://Pets/Pet.gd" id="6_xxhv2"]
[ext_resource type="Script" path="res://Pets/PetTypes/PupType.gd" id="7_4237e"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rjrme"]
atlas = ExtResource("3_rmlcu")
region = Rect2(0, 0, 160, 160)

[sub_resource type="SpriteFrames" id="SpriteFrames_prxbw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjrme")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="SceneManager" type="Node2D"]

[node name="Device" type="Node2D" parent="."]
position = Vector2(304, 640)
script = ExtResource("1_ptlsy")

[node name="EggBase" type="Sprite2D" parent="Device"]
position = Vector2(0, -256)
texture = ExtResource("1_momwt")

[node name="GameArea" type="Node2D" parent="Device" node_paths=PackedStringArray("device", "activePet", "background", "testBar1", "testBar2")]
position = Vector2(0, -232)
script = ExtResource("3_ymaw0")
device = NodePath("..")
activePet = NodePath("PupPet")
background = NodePath("RoomBackground")
testBar1 = NodePath("RoomBackground/CanvasLayer/ProgressBar")
testBar2 = NodePath("RoomBackground/CanvasLayer/ProgressBar2")

[node name="HungerTimer" type="Timer" parent="Device/GameArea"]

[node name="JoyTimer" type="Timer" parent="Device/GameArea"]

[node name="RoomBackground" type="Node2D" parent="Device/GameArea"]
script = ExtResource("4_rlyqa")

[node name="Sprite" type="Sprite2D" parent="Device/GameArea/RoomBackground"]
texture = ExtResource("2_4ghtk")

[node name="CanvasLayer" type="CanvasLayer" parent="Device/GameArea/RoomBackground"]

[node name="ProgressBar" type="ProgressBar" parent="Device/GameArea/RoomBackground/CanvasLayer"]
offset_left = 200.0
offset_top = 304.0
offset_right = 400.0
offset_bottom = 331.0
step = 1.0
show_percentage = false

[node name="ProgressBar2" type="ProgressBar" parent="Device/GameArea/RoomBackground/CanvasLayer"]
offset_left = 200.0
offset_top = 336.0
offset_right = 400.0
offset_bottom = 363.0
step = 1.0
rounded = true
show_percentage = false

[node name="PupPet" type="Node2D" parent="Device/GameArea" node_paths=PackedStringArray("leftBoundry", "rightBoundry", "sprite")]
position = Vector2(0, 40)
script = ExtResource("6_xxhv2")
leftBoundry = NodePath("../LeftBoundry")
rightBoundry = NodePath("../RightBoundry")
sprite = NodePath("AgumonSprite")
roamSpeed = 0.5
metadata/_edit_group_ = true

[node name="Type" type="Node" parent="Device/GameArea/PupPet"]
script = ExtResource("7_4237e")

[node name="MoveTimer" type="Timer" parent="Device/GameArea/PupPet/Type"]

[node name="AgumonSprite" type="AnimatedSprite2D" parent="Device/GameArea/PupPet"]
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_prxbw")

[node name="LeftBoundry" type="Marker2D" parent="Device/GameArea"]
position = Vector2(-88, 40)

[node name="RightBoundry" type="Marker2D" parent="Device/GameArea"]
position = Vector2(88, 40)

[connection signal="timeout" from="Device/GameArea/HungerTimer" to="Device/GameArea" method="tickHunger"]
[connection signal="timeout" from="Device/GameArea/JoyTimer" to="Device/GameArea" method="tickJoy"]
[connection signal="timeout" from="Device/GameArea/PupPet/Type/MoveTimer" to="Device/GameArea/PupPet/Type" method="_on_move_timer_timeout"]
